fixing broken declarations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
 
     <!-- for testing only: remove for production deployment-->
     <ul class="navigationlinks">
-      <li><a [routerLink]="['apitest']">API Test</a></li>
+      <li><a [routerLink]="['test-api']">API Test</a></li>
       <!--
   <li *ngIf="authService.isLoggedIn()"><a [routerLink]="['admin','webhook']">Webhook Test</a></li>
   -->
