--- a/src/app/test-api/test-api.component.html
+++ b/src/app/test-api/test-api.component.html
@@ -1,6 +1,6 @@
 <!-- for testing only -->
 <div>
-    <h2>Test API</h2>
+    <h2>API Test</h2>
     <div>See console for output.</div>
     <ul class="actions">
         <li>
