--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,58 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
+.error{
+  color: red;
+}
+.success{
+  color: forestgreen;
+}
+.example-fill-remaining-space {
+    /* This fills the remaining space, by using flexbox. 
+       Every toolbar row uses a flexbox row layout. */
+    flex: 1 1 auto;
+  }
+
+  .formwrapper {
+    background-color: whitesmoke;
+    list-style-type: none;
+    padding: 0;
+    border-radius: 3px;
+  }
+  .form-row {
+    display: flex;
+    justify-content: flex-end;
+    padding: .5em;
+  }
+  .form-row > label {
+    padding: .5em 1em .5em 0;
+    flex: 1;
+  }
+  .form-row > input {
+    flex: 2;
+  }
+  .form-row > input,
+  .form-row > button {
+    padding: .5em;
+  }
+  .form-row > button {
+   background: gray;
+   color: white;
+   border: 0;
+  }
+ @media screen and (min-width: 768px) {
+   	.form-row > input {
+    	flex: 3;  
+   }
+  }
+ @media screen and (min-width: 992px) {
+   	.form-row > input {
+    	flex: 4;  
+   }
+  }
+ @media screen and (min-width: 1200px) {
+   	.form-row > input {
+    	flex: 5;  
+   }
+  }
