add material icon font

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
       <img src="assets/logo-gold.png">
   </a>
   -->
-  <h1 style="margin-left: 1em;">Dialogflow Admin Client<span class="environmentName">{{environmentName}}</span></h1>
+  <h1 style="margin-left: 1em;">Dialogflow Admin Client</h1>
+  <span class="environmentName"> {{environmentName}}</span>
   <span class="example-fill-remaining-space"></span>
 
   <div class="login" *ngIf="authService.isLoggedIn()">
