--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,7 +29,7 @@
         margin-left: 4em;
     }
 }
-.hqlogo{
+.logo{
     margin-top: 1em;
     margin-left: 2em;
 }
@@ -63,4 +63,6 @@ mat-toolbar{
 }
 .environmentName{
     color: blue;
+    display: inline-block;
+    margin-left: 1em;
 }
