--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,21 +1,36 @@
-
 <div class="loginform">
-      <form [formGroup]="form">
-        <ul class="formwrapper">
-          <li class="form-row">
-            <label for="name">Username</label>
-            <input name="email" formControlName="email">
-          </li>
-          <li class="form-row">
-            <label>Password</label>
-            <input name="password" formControlName="password" type="password">
-          </li>
-          <li class="form-row">
-            <mat-spinner *ngIf="inProgress" diameter="30" strokeWidth="5" color="accent"></mat-spinner>
-            <button class="loginbutton" *ngIf="!inProgress" (click)="login()" [disabled]="inProgress">Login</button>
-          </li>
-          <li class="error" *ngIf="loginError">Login was unsuccessful.</li>
-        </ul>
-      </form>
+  <form [formGroup]="form">
+    <ul class="formwrapper">
+      <li class="form-row">
+        <label for="target"></label>
+        <mat-form-field>
+          <mat-select placeholder="environment" name="target" formControlName="target">
+            <mat-option *ngFor="let targetName of targetNames" [value]="targetName">
+              {{targetName}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <!--
+        <select name="target" formControlName="target">
+          <option *ngFor="let targetName of targetNames" [ngValue]="targetName">{{targetName}}</option>
+        </select>
+        -->
+
+      </li>
+
+      <li class="form-row">
+        <label for="name">Username</label>
+        <input name="username" formControlName="username">
+      </li>
+      <li class="form-row">
+        <label>Password</label>
+        <input name="password" formControlName="password" type="password">
+      </li>
+      <li class="form-row">
+        <mat-spinner *ngIf="inProgress" diameter="30" strokeWidth="5" color="accent"></mat-spinner>
+        <button class="loginbutton" *ngIf="!inProgress" (click)="login()" [disabled]="inProgress">Login</button>
+      </li>
+      <li class="error" *ngIf="loginError">Login was unsuccessful.</li>
+    </ul>
+  </form>
 </div>
-      
