database ping now works in api test

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="loginform">
-  <form [formGroup]="form">
+  <form [formGroup]="loginform">
     <ul class="formwrapper">
       <li class="form-row">
 
