--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,16 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <mat-toolbar>
-  <!--
-  <a [routerLink]="['']">
-      <img src="assets/logo-gold.png">
-  </a>
-  -->
-  <h1 style="margin-left: 1em;">Actions on Google Admin</h1>
-
-
-
-
+  <h1 style="margin-left: 1em;">Actions on Google Backend Admin</h1>
   <span class="environmentName" *ngIf="authService.getLoggedInUser()">{{authService.getCurrentTarget()}}</span>
   <span class="example-fill-remaining-space"></span>
-
   <div class="login" *ngIf="authService.isLoggedIn()">
     Logged in as {{authService.getLoggedInUser()}}
     | <a (click)="logout()">Logout</a>
   </div>
   <div class="login" *ngIf="authService.isLoggedOut()"><a [routerLink]="['login']">Login</a></div>
-
 </mat-toolbar>
 
 <div id="content">
   <div id="left" class="column">
-
-    <!--
-<div class="logo"><img src="assets/app-logo.png"> </div>
--->
 
     <ul class="navigationlinks" *ngIf="authService.isLoggedIn()">
       <!--
@@ -39,15 +23,16 @@
    -->
     </ul>
 
-    <!-- for testing only: remove for production deployment &#9654;-->
     <ul class="navigationlinks">
+      <li routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:
+        true}">
+        <span class='arrow'>&#9654;</span>
+        <a [routerLink]="['']">Home</a>
+      </li>
       <li routerLinkActive="active-link">
         <span class='arrow'>&#9654;</span>
         <a [routerLink]="['test-api']">API Test</a>
       </li>
-      <!--
-  <li *ngIf="authService.isLoggedIn()"><a [routerLink]="['admin','webhook']">Webhook Test</a></li>
-  -->
     </ul>
   </div>
 
