--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -57,6 +57,9 @@ mat-toolbar{
                     color: #333;
                 }
             }
+            li.entity{
+                text-transform: capitalize;
+            }
            
         }
 
