--- a/src/app/entities/entities.component.html
+++ b/src/app/entities/entities.component.html
@@ -1,23 +1,47 @@
 <div *ngIf="entityConfig">
   <h2>{{entityConfig.plural}}</h2>
+  <ng-container *ngIf="entityConfig.filter">
+    <ng-container *ngFor="let filter of entityConfig.filter">
+      <ng-container *ngIf="foreignKeyEntityConfigMap[filter.entity] as foreignKeyEntityConfig">
+        <div>
+          <span>{{foreignKeyEntityConfig.name}}</span>
 
+          <select (change)="loadFiltered(filter.field, $event.target.value)">
+            <option *ngIf="filter.all" [value]="FILTER_ALL">
+              all
+            </option>
+
+            <option *ngFor=" let entity of foreignKeyEntities[filter.entity]" [value]="entity.id">
+              {{entity[filter.label]}}
+            </option>
+
+          </select>
+        </div>
+      </ng-container>
+    </ng-container>
+  </ng-container>
   <div *ngIf="(entities$|async) as entities">
     <ul>
       <ng-container *ngFor="let entity of entities; let i=index">
         <ng-container *ngIf="100>i">
           <ng-container *ngIf="!formGroups[entity.id]">
-            <li>
+            <li class="displaying"
+              [ngClass]="{'enabled' : entity[entityConfig.enablement], 'disabled' : !entity[entityConfig.enablement]}">
               <ng-container *ngIf="entityConfig.enablement">
                 <a (click)="toggle(entity,entityConfig.enablement)">{{entity[entityConfig.enablement] ? 'Y' : 'N'}}</a>
               </ng-container>
 
               <ng-container *ngFor="let field of entityConfig.fields">
+
                 <ng-container *ngIf="!field.foreignKey">
-                  {{entity[field.name]}}
+                  <div [ngClass]="field.name">{{entity[field.name]}}</div>
                 </ng-container>
+
                 <ng-container *ngIf="field.foreignKey">
                   <ng-container *ngIf="foreignKeyEntitiesIdMap[field.foreignKey]">
-                    {{foreignKeyEntitiesIdMap[field.foreignKey][entity[field.name]][field.label]}}
+                    <div [ngClass]="field.name">
+                      {{foreignKeyEntitiesIdMap[field.foreignKey][entity[field.name]][field.label]}}
+                    </div>
                   </ng-container>
                 </ng-container>
               </ng-container>
@@ -27,7 +51,7 @@
             </li>
           </ng-container>
           <ng-container *ngIf="formGroups[entity.id]">
-            <li>
+            <li class="editing">
               <form [formGroup]="formGroups[entity.id]">
 
 
